--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Presentation</title>
   <script src="https://kit.fontawesome.com/e70e90600d.js" crossorigin="anonymous"></script>
-  <style>
-
-  </style>
-</head>
+  <link rel="stylesheet" href="./styles.css">
+  </head>
 <body>
   <!-- Page 1 - Introduction -->
   <section id="page-1" class="page">
